# Ichnaea

./: .flake8  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Dockerfile  Doxyfile.in  Ichnaea.code-workspace  env_setup.sh  pyproject.toml  update_submodules.sh
.devcontainer/: devcontainer.json
app/: pyproject.toml  testing.py
app/ichnaea/: board_values.py  ichnaea_client.py  ichnaea_messages.py  ltc7871.py  ltc_7871.py  messages.py  network_client.py  node_client.py
app/ichnaea/generator/: default_filter_generator.py  design_iir_lowpass_cmsis_butter.m  filter_coefficients.py
app/ichnaea/proto/: __init__.py  build_proto.sh  ichnaea.proto  ichnaea_async.proto  ichnaea_async_pb2.py  ichnaea_async_pb2.pyi  ichnaea_pb2.py  ichnaea_pb2.pyi  ichnaea_pdi.proto  ichnaea_pdi_pb2.py  ichnaea_pdi_pb2.pyi  ichnaea_rpc.proto  ichnaea_rpc_pb2.py  ichnaea_rpc_pb2.pyi
app/ichnaea/simulator/: __init__.py  grpc_client.py
app/ichnaea/simulator/proto/: build_proto.sh  sim_intf.proto  sim_intf_pb2.py  sim_intf_pb2.pyi  sim_intf_pb2_grpc.py
app/proto/: ichnaea_pb2.py  ichnaea_pb2.pyi
hw/design/: .gitignore  ltc7871.ipynb  ltc7871_designs.py  ltc7871_validator.py
hw/ver1/: IchnaeaV1.kicad_prl  IchnaeaV1.kicad_pro  IchnaeaV1.kicad_sch  NotesForV2.md  NotesForV2.txt  microcontrollers.kicad_sch  mppt_controller.kicad_sch  power_stage.kicad_sch  power_supply.kicad_sch  rf_controller.kicad_sch  sym-lib-table
hw/ver1/ControlStage/: IchnaeaControlV1.kicad_prl  IchnaeaControlV1.kicad_pro  IchnaeaControlV1.kicad_sch  mppt_controller.kicad_sch  rf_controller.kicad_sch
hw/ver1/PowerStage/: IchnaeaV1-all-pos.csv  fp-lib-table  (+20 more)
hw/ver2/: BMSDesignNotes.md  NotesForV3.md  PinMapping.ods
hw/ver3/: NotesForV3.md
src/: CMakeLists.txt  ichnaea_config.hpp  ichnaea_main.cpp  main.cpp  version.hpp
src/app/: CMakeLists.txt  app_config.cpp  app_config.hpp  app_decl.hpp  app_filter.cpp  app_filter.hpp  app_monitor.cpp  app_monitor.hpp  app_pdi.cpp  app_pdi.hpp  app_power.cpp  app_power.hpp  app_stats.cpp  app_stats.hpp  mppt.hpp
src/app/pdi/: boot_count.cpp  boot_count.hpp  cal_output_current.cpp  cal_output_current.hpp  config_max_system_voltage_input.cpp  config_max_system_voltage_input.hpp  config_max_temp_limit.cpp  config_max_temp_limit.hpp  config_min_system_voltage_input.cpp  config_min_system_voltage_input.hpp  config_min_temp_limit.cpp  config_min_temp_limit.hpp  ltc7871.cpp  ltc7871.hpp  max_system_voltage_input_rated_limit.cpp  max_system_voltage_input_rated_limit.hpp  min_system_voltage_input_rated_limit.cpp  min_system_voltage_input_rated_limit.hpp  mon_12v0_voltage.cpp  mon_12v0_voltage.hpp  mon_1v1_voltage.cpp  mon_1v1_voltage.hpp  mon_3v3_voltage.cpp  mon_3v3_voltage.hpp  mon_5v0_voltage.cpp  mon_5v0_voltage.hpp  mon_fan_speed.cpp  mon_fan_speed.hpp  mon_input_voltage.cpp  mon_input_voltage.hpp  mon_output_current.cpp  mon_output_current.hpp  mon_output_voltage.cpp  mon_output_voltage.hpp  mon_temperature.cpp  mon_temperature.hpp  pgood_monitor_timeout_ms.cpp  pgood_monitor_timeout_ms.hpp  phase_current_output_rated_limit.cpp  phase_current_output_rated_limit.hpp  (+12 more)
src/app/proto/: ichnaea_async.pb.c  ichnaea_async.pb.h  ichnaea_pdi.pb.c  ichnaea_pdi.pb.h  ichnaea_rpc.pb.c  ichnaea_rpc.pb.h  origin.md
src/bsp/: CMakeLists.txt  board_map.cpp  board_map.hpp  board_v1.hpp  board_v2.hpp
src/com/: CMakeLists.txt  async_messages.hpp  bms_client.cpp  bms_client.hpp  ctrl_server.cpp  ctrl_server.hpp
src/com/proto/: build_proto.sh  ichnaea.pb.c  ichnaea.pb.h  ichnaea.proto
src/com/rpc/: basic_services.cpp  ltc7871_services.cpp  manager_service.cpp  pdi_service.cpp  rpc_messages.hpp  rpc_services.hpp  sensor_service.cpp  setpoint_service.cpp  system_status_service.cpp
src/hw/: CMakeLists.txt  adc.cpp  adc.hpp  bootup.cpp  bootup.hpp  fan.cpp  fan.hpp  gpio.cpp  gpio.hpp  led.cpp  led.hpp  ltc7871.cpp  ltc7871.hpp  ltc7871_prv.cpp  ltc7871_prv.hpp  ltc7871_reg.hpp  nor.cpp  nor.hpp  sim_stubs.cpp  uart.cpp  uart.hpp
src/integration/flashdb/: fal_cfg.h  fdb_cfg.h
src/integration/freertos/: FreeRTOSConfig.h
src/integration/freertos/hw/: FreeRTOSConfig.h
src/integration/freertos/sim/: FreeRTOSConfig.h
src/integration/mbedutils/: CMakeLists.txt  assert_intf.cpp  cmn_intf.cpp  irq_intf.cpp  mbedutils_prj_config.hpp  serial_intf.cpp  system_intf.cpp  time_intf.cpp  uart_intf.cpp
src/sim/: CMakeLists.txt  sim_adc.c  sim_lifetime.cpp  sim_lifetime.hpp  sim_load.cpp  sim_load.hpp  sim_ports.hpp  sim_service_environment_spoofer.cpp  sim_service_environment_spoofer.hpp  sim_services.cpp  sim_services.hpp
src/sim/hw/: freertos_hooks.cpp  sim_adc.cpp  sim_adc.hpp  sim_fan.cpp  sim_gpio.cpp  sim_led.cpp  sim_ltc7871.cpp  sim_nor.cpp  sim_uart.cpp
src/system/: CMakeLists.txt  panic_handlers.cpp  panic_handlers.hpp  system_bootup.cpp  system_bootup.hpp  system_config.cpp  system_config.hpp  system_control.cpp  system_control.hpp  system_db.cpp  system_db.hpp  system_error.cpp  system_error.hpp  system_logging.cpp  system_logging.hpp  system_sensor.cpp  system_sensor.hpp  system_shutdown.cpp  system_shutdown.hpp  system_util.cpp  system_util.hpp
src/threads/: CMakeLists.txt  background_thread.cpp  control_thread.cpp  delayed_io_thread.cpp  ichnaea_threads.cpp  ichnaea_threads.hpp  monitor_thread.cpp
tests/: CMakeLists.txt  conftest.py  generate_mock_expect.sh  main_test_entry.cpp  pytest.ini
tests/expect/: panic_handlers_expect.cpp  panic_handlers_expect.hpp  system_error_expect.cpp  system_error_expect.hpp
tests/mock/: panic_handlers_mock.cpp  system_error_mock.cpp
tests/src/bsp/: CMakeLists.txt  test_board_map.cpp
tests/src/hw/nor/: CMakeLists.txt  test_nor.cpp
tests/src/system/: test_system_error.cpp
tests/src/system/system_config/: CMakeLists.txt  test_system_config.cpp
tests/src/system/system_db/: CMakeLists.txt  test_system_db.cpp
tests/sys/: fixtures.py  test_basic_communication.py  test_log_inspection.py  test_node_api.py  test_operational_range.py  test_pdi_update.py
tests/sys/sandbox/: test_sandbox.py
tests/sys/sim/: test_oor_conditions.py
(+54 files in other folders)
