[tool.poetry]
name = "Ichnaea"
version = "0.1.0"
description = "MPPT charge controller development environment"
authors = ["Brandon Braun <brandonbraun653@protonmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false
packages = [
    { include = "proto", from = "lib/nanopb/generator" }
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.8.3"
eseries = "^1.2.1"
loguru = "^0.7.2"
protobuf = "^5.27.2"
grpcio-tools = "^1.65.0"
mypy-protobuf = "^3.6.0"
pytest = "*"
mbedutils = {path = "lib/mbedutils/python", develop = true}

crc = "^7.0.0"
[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.2"

